Fix text wrapping on wildfire salon page.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1903,7 +1903,7 @@ select:focus-visible {
     color: var(--black);
     max-width: 800px;
     margin: 0 auto;
-    text-wrap: balance;
+    text-wrap: pretty;
 }
 
 .page-subtitle {
